# C_CPP

ex1/: CMakeLists.txt  README.md  cipher.c  main.c  tests.c
ex2/: CMakeLists.txt  README.md  main.c  sort_bus_lines.c  sort_bus_lines.h  test_bus_lines.c  test_bus_lines.h
ex3a/: CMakeLists.txt  README.md  markov_chain.c  markov_chain.h  tweets_generator.c
ex3b/: CMakeLists.txt  README.md  linked_list.h.gch  makefile  markov_chain.c  markov_chain.h  markov_chain.h.gch  snakes_and_ladders  snakes_and_ladders.c  tweets_generator  tweets_generator.c
ex4-yarivyar/: Activation.cpp  Activation.h  CMakeLists.txt  Dense.cpp  Dense.h  Matrix.cpp  Matrix.h  MlpNetwork.cpp  MlpNetwork.h  README.md  main.cpp  mlpnetwork
ex5-yarivyar/: CMakeLists.txt  Movie.cpp  Movie.h  README.md  RSUser.cpp  RSUser.h  RSUsersLoader.cpp  RSUsersLoader.h  RecommenderSystem.cpp  RecommenderSystem.h  RecommenderSystemLoader.cpp  RecommenderSystemLoader.h  main.cpp  presubmit.cpp  print_main.cpp
ex6-yarivyar/: CMakeLists.txt  Dictionary.hpp  HashMap.hpp  Helpers.h  Presubmit.cpp  Presubmit.hpp  README.md  ex6.tar  hosh.h  main.cpp  test_ex6.cpp
